--- a/books-api/package.json
+++ b/books-api/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/mongoose": "^5.11.97",
+    "@types/mocha": "^10.0.7",
+    "@types/multer": "^1.4.11",
     "@types/node": "^22.0.0",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
