--- a/books-api/package.json
+++ b/books-api/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "test": "jest"
+    "test": "jest --config jest.config.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -13,6 +13,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.7",
